<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogStationNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/station_name"
        app:helperText="@string/input_mandatory">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogEditTextStationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogStationArmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/arm"
        app:suffixText="@string/mm"
        app:helperText="@string/input_mandatory">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogEditTextStationArm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogStationUnitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/unit"
        app:helperText="@string/input_mandatory">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogEditTextStationUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogStationMaxInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/max_input"
        app:suffixText="@string/kg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogEditTextStationMaxInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbIsNonLifting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_is_non_lifting"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbHasSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_has_slider" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbHasPresets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_has_presets" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditPresets"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_button_edit_preset"
        android:visibility="visible"
        app:icon="@drawable/ic_edit_aircraft"
        app:iconSize="18dp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbHasAmountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_has_amount_input" />
    </LinearLayout>
</ScrollView>
